--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,102 @@
 </head>
 <body>
 
+  <script type="text/x-handlebars">
+    <div class="navbar">
+      <div class="navbar-inner">
+        <a class="brand" href="#">Thinking Forward</a>
+        <ul class="nav">
+          <li>{{#linkTo 'posts'}}Posts{{/linkTo}}</li>
+          <li>{{#linkTo 'about'}}About{{/linkTo}}</li>
+        </ul>
+      </div>
+    </div>
+
+    {{outlet}}
+  </script>
+
+  <script type="text/x-handlebars" id="posts/index">
+    <p class="text-warning">Please select a post</p>
+  </script>
+
+  <script type="text/x-handlebars" id="posts">
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <table class="table">
+            <thead>
+              <tr><th>Recent Posts</th></tr>
+            </thead>
+            {{#each model}}
+            <tr><td>
+              {{#linkTo 'post' this}}{{title}} <small class="muted">by {{author}}</small>{{/linkTo}}
+            </td></tr>
+            {{/each}}
+          </table>
+        </div>
+        <div class="span9">
+          {{outlet}}
+        </div>
+      </div>
+    </div>
+  </script>
+
+  <script type="text/x-handlebars" id="post">
+    {{#if isEditing}}
+      {{partial 'posts/edit'}}
+      <button {{action 'doneEditing'}}>Done</button>
+    {{else}}
+      <button {{action 'edit'}}>Edit</button>
+    {{/if}}
+        
+    <h1>{{title}}</h1>
+    <h2>by {{author}} <small class='muted'>({{date publishedAt}})</small></h2>
+    
+    <hr>
+
+    <div class='intro'>
+      {{markdown intro}}
+    </div>
+
+    <div class='below-the-fold'>
+      {{markdown extended}}
+    </div>
+  </script>
+
+  <script type="text/x-handlebars" id="posts/_edit">
+    <p>{{view Ember.TextField valueBinding='title'}}</p>
+    <p>{{view Ember.TextArea valueBinding='intro'}}</p>
+    <p>{{view Ember.TextArea valueBinding='extended'}}</p>
+  </script>
+
+  <script type="text/x-handlebars" id="about">
+    <h1>Customer Experience: it’s our Business; it’s our Passion.</h1>
+    <p>&nbsp;</p>
+    <p>At Dominion Digital, we help our customers delight their customers.</p>
+    <p>Our team of consultants advises on Customer Experience strategy and implements solutions spanning people, process, and technology, all with the combined goal of enhancing customer experience and improving business results. Our diverse client base consists primarily of Fortune 1000 companies in the mid-Atlantic region.</p>
+    <p>Founded in 1997 with a primary focus on providing positive human experiences for our employees, that foundational commitment has naturally expanded to include our communities, our clients, and their customers. These commitments, combined with our pursuit of excellence and our hunger for learning, have earned us high marks and recognition from these four groups of people for over fifteen years.</p>
+    <div class="row">
+      <div class="span6">
+        <h2>Richmond Office</h2>
+        <p>
+          4101 Cox Road<br>
+          Suite 350<br>
+          Glen Allen, VA 23060
+        </p>
+        <p> Phone: 804.648.0600</p>
+      </div>
+      <div class="span6">
+        <h2>Charlottesville Office</h2>
+        <p>
+          210 Ridge-McIntire Road<br>
+          Suite 200 <br>
+          Charlottesville, VA 22903
+        </p>
+        <p> Phone:434.984.1112</p>
+      </div>
+    </div>
+  </script>
+
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
