Use the input and textarea short form view stuff

--- a/client/index.html
+++ b/client/index.html
@@ -71,9 +71,9 @@
   </script>
 
   <script type="text/x-handlebars" id="post/_edit">
-    <p>{{view Ember.TextField valueBinding='title'}}</p>
-    <p>{{view Ember.TextArea valueBinding='intro'}}</p>
-    <p>{{view Ember.TextArea valueBinding='extended'}}</p>
+    <p>{{input value=title}}</p>
+    <p>{{textarea value=intro}}</p>
+    <p>{{textarea value=extended}}</p>
   </script>
 
   <script type="text/x-handlebars" id="about">
