--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@
     {{/if}}
       
     <h1>{{title}}</h1>
-    <h2>by {{author}} <small class='muted'>({{date publishedAt}})</small></h2>
+    <h2>by {{author}} <small class='muted'>({{date published}})</small></h2>
     
     <hr>
 
