--- a/ember-app-kit-client/tests/index.html
+++ b/ember-app-kit-client/tests/index.html
@@ -27,6 +27,8 @@
   <script src="/vendor/ember-data-shim/ember-data.js"></script>
   <script src="/vendor/almond.js"></script>
   <script src="/vendor/resolver.js"></script>
+  <script src="/vendor/momentjs/moment.js"></script>
+  <script src="/vendor/showdown/src/showdown.js"></script>
 
   <script src="/assets/app.js"></script>
   <script src="/assets/templates.js"></script>
